# CN2_Rules

./: Attribute.h  CMakeLists.txt  CN2UnorderedLearner.cpp  CN2UnorderedLearner.h  DataContainer.cu  DataContainer.cuh  DataFileReader.cpp  DataFileReader.cu  DataFileReader.cuh  DataFileReader.h  Defines.cuh  KernelArray.h  Measure.h  README.md  Rule.cpp  Rule.h  RuleClassifier.cpp  RuleClassifier.h  RuleHunter.cpp  RuleHunter.h  SelectorFactory.cpp  SelectorFactory.h  SelectorGenerator.cpp  SelectorGenerator.h  Selectors.cpp  Selectors.h  Validators.cpp  Validators.h  main.cpp  main.cu
data/: description.txt
